Improvements to Dark Mode button border styles (part of issue #264)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -191,6 +191,7 @@ input[type="checkbox"] + label {
 }
 
 .toolbar-button:hover {
+    border: 1px solid transparent;
     border-radius: 2px;
     background-color: var(--color-toolbarbtn-hover-bkgd);
 }
