--- a/wx-src/style/laf.css
+++ b/wx-src/style/laf.css
@@ -8,6 +8,7 @@
 :root {
     --color-btn-bkgd: rgba(12, 12, 13, 0.1);
     --color-btn-hover-bkgd: rgba(12, 12, 13, 0.2);
+    --color-btn-hover-border: rgba(12, 12, 13, 0.1);
     --color-btn-active-bkgd: rgba(12, 12, 13, 0.3);
     --color-btn-border: rgba(12, 12, 13, 0.1);
     --color-btn-text: black;
@@ -27,6 +28,7 @@
     :root {
 	--color-btn-bkgd: #4a4a4f;
 	--color-btn-hover-bkgd: #606060;
+	--color-btn-hover-border: #606060;
 	--color-btn-active-bkgd: #737373;
 	--color-btn-border: #4a4a4f;
 	--color-btn-text: #f9f9fa;
@@ -82,6 +84,7 @@ button.default {
 }
 
 button:hover {
+    border-color: var(--color-btn-hover-border);
     background-color: var(--color-btn-hover-bkgd);
 }
 
